--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,8 +18,8 @@ html {
  */
 
 body {
-  color: #545149;
-  background-color: #f4f1ec;
+  color: #212121;
+  background-color: #fffefd;
   font-size: 24px;
   font-family: "Source Sans 3", sans-serif;
 }
@@ -27,10 +27,6 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
-nav {
-  display: flex;
-  justify-content: space-between;
-}
 
 main {
   width: 90%;
