--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,7 +2,7 @@
   height: 406px;
   padding-top: 60px;
   width: 100%;
-  background-color: #3db4b8;
+  background-color: #f5a299;
   background-image: url("https://www.transparenttextures.com/patterns/black-felt.png");
   display: flex;
   flex-direction: column;
@@ -17,11 +17,35 @@
 
 .name {
   margin: 0px;
-  color: #2206f6;
+  color: #ffffff;
   padding-bottom: 15px
 }
 
 .notbold {
   font-weight: normal;
 
+}
+
+@media only screen and (min-width:1024px) {
+
+  #display-user {
+    margin-right: 4em;
+    margin-left: 2em;
+    margin-top: 1em;
+    height: 350px;
+    width: 40%;
+    background-color: #f5a299;
+    background-image: url("https://www.transparenttextures.com/patterns/black-felt.png");
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .tweetbox-tweets {
+    margin-top: 240px;
+    display: flex;
+    flex-direction: row;
+    margin-right: 2%;
+  }
 }
