--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -19,9 +19,10 @@ section.new-tweet {
 
 button {
   height: 50px;
-  background-color: #4056a1;
+  background-color: #888;
   color: #ffff;
 }
+
 
 .main-tweet-form {
   resize: none;
@@ -42,7 +43,13 @@ button {
   width: 100%;
 }
 
-#tweet-text ::placeholder {
-  color: black;
+#tweet-text {
+  color: #888;
   font-size: 1em;
+}
+
+.empty-error {
+  color: #6c150f;
+  font-weight: bold;
+  margin: 10px 0;
 }
